clusters/production/ai/deepstack/deepstackui-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deepstackui
  namespace: ai
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - deepstackui.rees.ca
  rules:
  - backendRefs:
    - name: deepstackui
      port: 8501
