clusters/production/ai/deepstack/deepstackui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deepstackui-ingress
  namespace: ai
spec:
  ingressClassName: internal-nginx  
  rules:
  - host: "deepstackui.rees.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deepstackui
            port:
              number: 8501
